sono arrivata all'admin panel

--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<html lang="it">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>NIKELINO Shop</title>
+  <meta name="description" content="Nikelino — Grafiche • Settaggi • Editing • FiveM Shop" />
+  <link rel="icon" href="/src/assets/logo-no-bg.png" />
+</head>
+
+<body class="bg-gradient-to-br from-[#0b1220] to-[#091021] text-[var(--text)]">
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
