aggiunte animazioni ovunque e update review

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>NIKELINO Shop</title>
+  <title>Nikelino Shop</title>
   <meta name="description" content="Nikelino — Grafiche • Settaggi • Editing • FiveM Shop" />
   <link rel="icon" href="/src/assets/logo-no-bg.png" />
 </head>
