--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Nikelino Shop</title>
   <meta name="description" content="Nikelino — Grafiche • Settaggi • Editing • FiveM Shop" />
   <link rel="icon" href="/src/assets/logo-no-bg.png" />
+  <script type="text/javascript"
+    src="https://embeds.iubenda.com/widgets/7a67bbf5-d17b-4c1c-8bc7-b7467f55d2b7.js"></script>
 </head>
 
 <body class="bg-gradient-to-br from-[#0b1220] to-[#091021] text-[var(--text)]">
